--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -243,5 +243,7 @@ input[type=submit] {
   line-height: 34px;
   color: #777;
   background: url("../images/concrete_seamless.png");
+  /* {#masthead {
+    position: fixed     ???? */
   }
 }
