--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@ body {
   font-size: 16px;
   line-height: 34px;
   color: #777;
-  background: url("../images/concrete_seamless.png");
+  background: url("../images/SkylineRNBackground.png");
 }
 
 * {
@@ -224,7 +224,7 @@ input[type=submit] {
   font-size: 16px;
   line-height: 34px;
   color: #777;
-  background: url("../images/concrete_seamless.png");
+  background: url("..\images\SkylineRNBackground.png");
   text-align: center;}
 }
 
@@ -234,7 +234,7 @@ input[type=submit] {
   font-size: 0.9rem;
   line-height: 34px;
   color: #777;
-  background: url("../images/concrete_seamless.png");}
+  background: url("..\images\SkylineRNBackground.png");}
 }
 /*for mobile devices*/
 @media only screen and (max-width: 640px) {body {
@@ -242,7 +242,7 @@ input[type=submit] {
   font-size: 0.75rem;
   line-height: 34px;
   color: #777;
-  background: url("../images/concrete_seamless.png");
+  background: url("..\images\SkylineRNBackground.png");
   /* {#masthead {
     position: fixed     ???? */
   }
